Add link to Google Doc for formatted summary

--- a/challenges.html
+++ b/challenges.html
@@ -102,6 +102,7 @@
       <div class="control-row" style="margin-top:10px;">
         <button class="btn" id="cs-copy">Copy code</button>
         <button class="btn" id="cs-formatted-summary">Copy Formatted Summary</button>
+        <a href="https://docs.google.com/document/d/1C0l49D3npkyLvhw1N58KIde-as9SZgYHXd-nrfE4HAY/edit?usp=sharing" class="btn">Google Doc</a>
       </div>
       <div class="callout" style="margin-top:10px;">
         <b>How this works:</b> The formatted summary includes your name, the challenge title, and a <i>Code Link</i> that restores your code when opened. Paste it into the class Google Doc so you can resume later from any computer.
