Add link to online Python playground

--- a/index.html
+++ b/index.html
@@ -64,6 +64,16 @@
               transition: background 0.2s;">
       🧩 Go to Challenges
     </a>
+    <a href="https://www.onlineide.pro/playground/python" 
+       style="background-color: var(--accent);
+              color: white;
+              padding: 8px 16px;
+              border-radius: 8px;
+              text-decoration: none;
+              font-weight: 600;
+              transition: background 0.2s;">
+      🧩 Go to Challenges
+    </a>
     <span style="color: var(--muted); margin-left: 10px;">Practice problems and mini-projects</span>
   </nav>
 
