--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               text-decoration: none;
               font-weight: 600;
               transition: background 0.2s;">
-      🧩 Go to Challenges
+      🧩 Go OnlineIDE.pro
     </a>
     <span style="color: var(--muted); margin-left: 10px;">Practice problems and mini-projects</span>
   </nav>
