Fix style attribute in anchor tag

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <span style="color: var(--muted); margin-left: 10px;">Practice problems and mini-projects</span>
     <br />
     <a href="https://www.onlineide.pro/playground/python" 
-       style="background-color: var(--accent);
+       target="_blank" style="background-color: var(--accent);
               color: white;
               padding: 8px 16px;
               border-radius: 8px;
