--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+e<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -26,7 +26,7 @@
     <span style="color: var(--muted); margin-left: 10px;">Practice problems and mini-projects</span>
     <br />
     <br />
-    <a href="" 
+    <a href="challenges.html" 
        style="background-color: var(--accent);
               color: white;
               padding: 8px 16px;
